--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.0.0-beta.0",
+    "dog-names": "^2.1.0",
     "framer-motion": "^6.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
