--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/metamask": "^8.0.0-beta.0",
     "dog-names": "^2.1.0",
+    "dotenv": "^16.0.1",
     "framer-motion": "^6.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
